[tool.poetry]
name = "ma-rituja"
version = "0.1.1"
description = ""
authors = ["Rituja Pardhi <rituja.pardhi@fkie.fraunhofer.de>"]
readme = "README.md"
packages = [
    {include = "impnode"}
]

[tool.poetry.dependencies]
python = "3.10.*"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
networkx = "^2.8.8"
numpy = "1.25.0"
gymnasium = "^0.28.1"
torch_geometric = "^2.3.1"
livelossplot = "^0.5.5"

[tool.poetry.group.jupyter]
optional = true
[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.14.5"
tbparse = "^0.0.8"


[tool.poetry.group.training]
optional = true
[tool.poetry.group.training.dependencies]
optuna = "^3.2.0"
optuna-dashboard = "^0.12.0"
tensorboard = "^2.14.0"
seaborn = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"